[project]
name = "falrekian-arcane-protocol"
version = "0.0.2"
authors = [
    { name="Ryan LeBlanc" }
]
description = "Access and manage various nodes"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.scripts]
codex = "arcane_protocol.codex.__main__:cli"
lattice = "arcane_protocol.lattice.__main__:cli"
nexus = "arcane_protocol.nexus.__main__:cli"
vault = "arcane_protocol.vault.__main__:cli"